# StreamlitThemes

./: LICENSE  README.md  app.py  pyproject.toml  readme.py  requirements.txt
pages/: custom_theme_widget.py  list_of_themes.py  preset_theme_widget.py  theme_widget.py
src/streamlit_themes/: __init__.py  component.py  constants.py  theme.py  widgets.py
src/stthemes/: component.py  constants.py
