[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "streamlit-themes"
version = "0.1.0"
description = "A package for customizing and managing themes in Streamlit applications."
long_description = "file: README.md"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Patrick Garrett", email = "pgarrett@scripps.edu"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "streamlit",
]

[tool.setuptools]
package-dir = {"" = "src"}
python_requires = ">=3.8"
