[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "streamlit-themes"
authors = [
    {name = "Patrick Garrett", email = "pgarrett@scripps.edu"},
]
description = "A package for customizing themes in Streamlit apps."
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
"streamlit",
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
repository = "https://github.com/pgarrett-scripps/StreamlitThemes"

[tool.setuptools.dynamic]
version = {attr = "streamlit_themes.__version__"}